CLN: Fix incorrect margins to use gaps of correct width

--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -17,13 +17,13 @@ img {
 .plants {
   display: flex;
   justify-content: space-around;
+  gap: 52px
 }
 
 .barberry, .chili, .pepper, .saffron {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 30px;
   text-align: center;
 }
 
